Move to clojurescript
Figwheel setup ready